--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 text-left">
-							<h1>Hi, I'm jiang</h1>
+							<h1>你好，我是江昌华</h1>
 							<h2 class="cd-headline clip is-full-width">
 								<span class="cd-words-wrapper">
-									<b class="is-visible">Professional Graphic Designer</b>
-									<b>Fun loving &amp; coffee freak!</b>
-									<b>Photography is my passion</b>
+									<b class="is-visible">计算机专业</b>
+									<b>最爱 &amp;牛奶</b>
+									<b>拍照是兴趣</b>
 								</span>
 							</h2>
-							<a href="#about" class="page-scroll btn custom-btn-3">LEARN MORE</a>
+							<a href="#about" class="page-scroll btn custom-btn-3">L了解更多</a>
 						</div>
 					</div>
 				</div>
@@ -127,25 +127,25 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="sub-headline">What I do<span class="dot">.</span></h2>
+						<h2 class="sub-headline">我能做什么<span class="dot">.</span></h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-duration="1s" data-wow-delay=".3s">
 						<h3><span class="number">1.</span>Website Layout</h3>
-						<p>Design mockups for agencies who have in-house developers ready to build.</p>
+						<p>熟练使用</p>
 					</div>				
 					<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-duration="1s" data-wow-delay=".5s">
 						<h3><span class="number">2.</span>Logo Design</h3>
-						<p>I will provide logo that is fresh, innovative &amp; truly means business.</p>
+						<p>熟练使用</p>
 					</div>
 					<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-duration="1s" data-wow-delay=".7s">
 						<h3><span class="number">3.</span>Brand Identity</h3>
-						<p>For your brand to be impactful, remembered &amp; easily recognized.</p>
+						<p>熟练使用 &amp; 简单</p>
 					</div>
 					<div class="col-md-3 col-sm-6 wow fadeIn" data-wow-duration="1s" data-wow-delay=".9s">
 						<h3><span class="number">4.</span>Print Design</h3>
-						<p>Ready-to-print posters, flyers to business cards &amp; letterhead.</p>
+						<p>熟练使用 &amp; 简单</p>
 					</div>
 				</div>
 			</div>
@@ -161,17 +161,17 @@
 					</div>
 					<div class="col-md-6">
 						<div class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".4s">
-							<h2 class="sub-headline">Introduction<span class="dot">.</span></h2>
-							<p><u>Hi, there!</u>&nbsp;I am Simon. Currently working as a senior graphic designer. I am always passionate about graphic design, love to create modern design &amp; provide great client support.</p>	
+							<h2 class="sub-headline">自我介绍<span class="dot">.</span></h2>
+							<p><u>Hi, there!</u>&nbsp;我是江昌华 &amp; 请给我一次机会</p>	
 
 							<ul class="info">
-								<li>Date Of Birth : 04 June, 1990</li>	
-								<li>Country : United Kingdom</li>
+								<li>出生日期：2000</li>	
+								<li>所在城市：深圳</li>
 							</ul>
 						</div>		
 
 							<div class="download-cv wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">
-								<a href="#">Download CV</a>
+								<a href="#">回到头部</a>
 							</div>						
 					</div>
 				</div>
@@ -184,8 +184,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 wow fadeIn" data-wow-duration="1s" data-wow-delay=".4s">
-					<h2 class="sub-headline">Skills<span class="dot">.</span></h2>
-						<p>Lorem ipsum dolor sit amet, mundi invidunt persequeris eu sed ridens facilisis eum. Lorem ipsum dolor sit amet, mundi invidunt sed ridens facilisis eum.</p>
+					<h2 class="sub-headline">技术<span class="dot">.</span></h2>
+						<p>学习</p>
 					</div>				
 					<div class="col-md-4">
 							<h3>Photoshop</h3>
@@ -229,20 +229,20 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="sub-headline">Work strategy<span class="dot">.</span></h2>
+						<h2 class="sub-headline">工作攻略<span class="dot">.</span></h2>
 					</div>
 				</div>
 				<div class="row sub-icon">
 					<div class="col-md-4">
 
 						<div class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".2s">
-							<h3><span class="ti-light-bulb"></span>Ideas</h3>
-							<p>Lorem ipsum dolor sit amet, mundi invidunt persequeris eu sed ridens facilisis eum.</p>
+							<h3><span class="ti-light-bulb"></span>主意</h3>
+							<p>学习</p>
 						</div>		
 
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-							<h3><span class="ti-pencil"></span>Design</h3>
-							<p>Lorem ipsum dolor sit amet, mundi invidunt persequeris eu sed ridens facilisis eum.</p>	
+							<h3><span class="ti-pencil"></span>设计</h3>
+							<p>学习</p>	
 						</div>	
 
 						</div>
@@ -252,13 +252,13 @@
 						<div class="col-md-4">
 
 						<div class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".2s">
-							<h3><span class="ti-control-shuffle"></span>Approve</h3>
-							<p>Lorem ipsum dolor sit amet, mundi invidunt persequeris eu sed ridens facilisis eum.</p>
+							<h3><span class="ti-control-shuffle"></span>通过</h3>
+							<p>学习</p>
 						</div>	
 
 						<div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-							<h3><span class="ti-upload"></span>Live</h3>
-							<p>Lorem ipsum dolor sit amet, mundi invidunt persequeris eu sed ridens facilisis eum.</p>
+							<h3><span class="ti-upload"></span>生活</h3>
+							<p>学习</p>
 						</div>	
 
 					</div>
@@ -268,7 +268,7 @@
 		<!-- END: Work strategy -->
 
 		<!-- Quotes -->
-		<section id="quotes">
+		<!-- <section id="quotes">
 			<div class="container">
 				<div class="row">
 					<div class="quotes-overlay"></div>
@@ -277,7 +277,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- END: Quotes -->
 
 		<!-- Portfolio -->
@@ -291,7 +291,7 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12 item-filter bot-margin">
     					<ul class="list-inline text-center">
-    						<li class="filter" data-filter="all">All</li>
+    						<li class="filter" data-filter="all">全部</li>
     						<li class="filter" data-filter=".print">Print</li>
     						<li class="filter" data-filter=".brand">Brand</li>
     						<li class="filter" data-filter=".logo">Logo</li>
@@ -377,7 +377,7 @@
 
         							<div class="row">
         								<div class="col-md-12">
-        									<h2 class="modal-title">Project Details</h2>
+        									<h2 class="modal-title">项目详情</h2>
         								</div>
         							</div>
 
@@ -389,7 +389,7 @@
         								<img src="assets/img/portfolio/portfolio01.jpg" alt="" class="img-responsive center-block">
         							</div>
         							<div class="col-md-8">
-        								<h3>Project -</h3>
+        								<h3>项目 -</h3>
         								<p>Logo creation of XYZ</p>
         								<h3>Description -</h3>
         								<p>Ipsum partem voluptatibus ex nam, prima virtute electram ius ei, vide error intellegat id cum. Duo ut accumsan molestie. Feugait referrentur vel in, te nostro convenire per, nullam nostrud placerat cum ne. Ne ancillae expetenda nec, dicam oportere te mel, audiam mnesarchum.</p>
@@ -420,20 +420,20 @@
 				<div class="row sub-icon">
 					<div class="col-md-3 col-sm-6 col-xs-6 text-center">
 						<h2 class="counter">804</h2>
-						<h3><span class="ti-package"></span>Projects</h3>
+						<h3><span class="ti-package"></span>项目</h3>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-6 text-center">
 						<h2 class="counter">1520</h2>
-						<h3><span class="ti-download"></span>Downloads</h3>
+						<h3><span class="ti-download"></span>下载</h3>
 
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-6 text-center">
 						<h2 class="counter">780</h2>
-						<h3><span class="ti-heart"></span>Clients</h3>
+						<h3><span class="ti-heart"></span>联系</h3>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-6 text-center">
 						<h2 class="counter">15</h2>
-						<h3><span class="ti-cup"></span>Awards</h3>
+						<h3><span class="ti-cup"></span>奖励</h3>
 					</div>
 				</div>
 			</div>
@@ -445,7 +445,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="sub-headline">Experience<span class="dot">.</span></h2>
+						<h2 class="sub-headline">生活经历<span class="dot">.</span></h2>
 					</div>			
 				</div>	
 				<div class="row">
@@ -456,11 +456,11 @@
 							</div>
 							<div class="col-sm-9">
 								<div class="border-style wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-									<span class="year">2020 - PRESENT</span>
+									<span class="year">2020 - 现在</span>
 								</div>
 								<div class="wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">
-									<h3><span class="ti-briefcase experience"></span>Senior Designer</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet, mattis arcu at, lacinia ligula. Praesent bibendum eros ut nulla adipiscing tempus.</p>
+									<h3><span class="ti-briefcase experience"></span>初中</h3>
+									<p>优秀</p>
 								</div>	
 							</div>
 						</div>	
@@ -477,8 +477,8 @@
 									<span class="year">2009</span>
 								</div>	
 								<div class="wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">					
-									<h3><span class="ti-briefcase experience"></span>Lead Designer</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet, mattis arcu at, lacinia ligula. Praesent bibendum eros ut nulla adipiscing tempus.</p>
+									<h3><span class="ti-briefcase experience"></span>高中</h3>
+									<p>优秀</p>
 								</div>	
 							</div>
 						</div>	
@@ -495,8 +495,8 @@
 									<span class="year">2005</span>
 								</div>	
 								<div class="wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">					
-									<h3><span class="ti-briefcase experience"></span>Graphic Designer</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet, mattis arcu at, lacinia ligula. Praesent bibendum eros ut nulla adipiscing tempus.</p>
+									<h3><span class="ti-briefcase experience"></span>计算机</h3>
+									<p>科学与技术</p>
 								</div>	
 							</div>
 						</div>	
@@ -511,7 +511,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="sub-headline">Education<span class="dot">.</span></h2>
+						<h2 class="sub-headline">教育<span class="dot">.</span></h2>
 					</div>
 				</div>
 				<div class="row top-pad">
@@ -520,9 +520,9 @@
 							<span class="year">2002</span>
 						</div>
 						<div class="wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">
-							<h3 class="sub-icon"><span class="ti-book"></span>Master Degree</h3>
-							<h4>University Of Oxford</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae lacinia.</p>
+							<h3 class="sub-icon"><span class="ti-book"></span>初中</h3>
+							<h4>初中学校</h4>
+							<p>优秀</p>
 						</div>	
 					</div>
 					<div class="col-md-4">
@@ -530,9 +530,9 @@
 							<span class="year">2000</span>
 						</div>
 						<div class="wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">
-							<h3 class="sub-icon"><span class="ti-book"></span>Bachelor Degree</h3>
-							<h4>University Of Cambridge</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem lacinia.</p>
+							<h3 class="sub-icon"><span class="ti-book"></span>高中</h3>
+							<h4>高中学校</h4>
+							<p>优秀</p>
 						</div>	
 					</div>
 					<div class="col-md-4">
@@ -540,9 +540,9 @@
 							<span class="year">1998</span>
 						</div>
 						<div class="wow fadeIn" data-wow-duration="2s" data-wow-delay=".5s">
-							<h3 class="sub-icon"><span class="ti-book"></span>Diploma Degree</h3>
-							<h4>Metropolitan College</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem lacinia.</p>
+							<h3 class="sub-icon"><span class="ti-book"></span>大学</h3>
+							<h4>大学学校</h4>
+							<p>优秀</p>
 						</div>	
 					</div>
 				</div>	
@@ -551,7 +551,7 @@
 		<!-- END: Education -->
 
 		<!-- Call to action -->
-		<section id="cta">
+		<!-- <section id="cta">
 			<div class="container">
 				<div class="row status-icon">
 					<div class="cta-overlay"></div>
@@ -568,7 +568,7 @@
 					</div>	
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- END: Call to action -->
 
 		<!-- Reviews -->
@@ -576,7 +576,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="sub-headline">What people say<span class="dot">.</span></h2>
+						<h2 class="sub-headline">评论<span class="dot">.</span></h2>
 					</div>
 				</div>
 				<div class="row top-pad">
@@ -587,8 +587,8 @@
 									<img src="assets/img/reviews/01.jpg" alt="" class="img-responsive center-block">
 								</div>
 								<div class="col-sm-8 sub-icon wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".5s">			
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet mattis arcu lacinia.</p>
-									<h3><span class="ti-comment-alt"></span>Matt Preston</h3>
+									<p>优秀</p>
+									<h3><span class="ti-comment-alt"></span>老师</h3>
 								</div>
 							</div>	
 						</div>
@@ -598,8 +598,8 @@
 									<img src="assets/img/reviews/02.jpg" alt="" class="img-responsive center-block">
 								</div>
 								<div class="col-sm-8 sub-icon wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".5s">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet mattis arcu lacinia.</p>
-									<h3><span class="ti-comment-alt"></span>Thomas Clark</h3>
+									<p>极为优秀</p>
+									<h3><span class="ti-comment-alt"></span>同学</h3>
 								</div>
 							</div>	
 						</div>
@@ -609,8 +609,8 @@
 									<img src="assets/img/reviews/03.jpg" alt="" class="img-responsive center-block">
 								</div>
 								<div class="col-sm-8 sub-icon wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".5s">
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet mattis arcu lacinia.</p>
-									<h3><span class="ti-comment-alt"></span>Christine Jones</h3>
+									<p>差劲</p>
+									<h3><span class="ti-comment-alt"></span>朋友</h3>
 								</div>
 							</div>	
 						</div>
@@ -648,7 +648,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h2 class="sub-headline">Latest News<span class="dot">.</span></h2>
+						<h2 class="sub-headline">工作经历<span class="dot">.</span></h2>
 					</div>
 				</div>
 				<div class="row top-pad">
@@ -657,11 +657,11 @@
 							<a href="#"><img src="assets/img/blog/b_01.jpg" alt="" class="img-responsive center-block"></a>
 						</div>	
 							<div class="blog-info">
-								<h3><span class="ti-layout-media-overlay-alt-2 blog-icon"></span>Lorem ipsum sample blog</h3>
+								<h3><span class="ti-layout-media-overlay-alt-2 blog-icon"></span>一一</h3>
 								<div class="border-style">
 									<span class="date">05 May, 2016</span>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet, mattis arcu at, lacinia praesent bibendum eros tempus.</p>
+								<p>吃饭</p>
 							</div>
 							<div class="border-style">
 								<a href="#" class="more">Read more</a>	
@@ -672,11 +672,11 @@
 							<a href="#"><img src="assets/img/blog/b_02.jpg" alt="" class="img-responsive center-block"></a>
 						</div>	
 							<div class="blog-info">
-								<h3><span class="ti-layout-media-overlay-alt-2 blog-icon"></span>Lorem ipsum sample blog</h3>
+								<h3><span class="ti-layout-media-overlay-alt-2 blog-icon"></span>二二</h3>
 								<div class="border-style">
 									<span class="date">15 March, 2016</span>
 								</div>								
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet, mattis arcu at, lacinia praesent bibendum eros tempus.</p>
+								<p>喝水</p>
 							</div>	
 							<div class="border-style">
 								<a href="#" class="more">Read more</a>	
@@ -687,11 +687,11 @@
 							<a href="#"><img src="assets/img/blog/b_03.jpg" alt="" class="img-responsive center-block"></a>
 						</div>	
 							<div class="blog-info">
-								<h3><span class="ti-layout-media-overlay-alt-2 blog-icon"></span>Lorem ipsum sample blog</h3>
+								<h3><span class="ti-layout-media-overlay-alt-2 blog-icon"></span>三三</h3>
 								<div class="border-style">
 									<span class="date">18 June , 2020</span>
 								</div>								
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vitae sem laoreet, mattis arcu at, lacinia praesent bibendum eros tempus.</p>
+								<p>睡觉</p>
 							</div>
 							<div class="border-style">
 								<a href="#" class="more">Read more</a>	
@@ -710,15 +710,15 @@
 						<div class="row">
 							<div class="col-sm-4 wow fadeInDown" data-wow-duration="1.5s" data-wow-delay=".4s">
 								<h3><span class="ti-location-pin"></span>Address</h3>
-								<p>218A Brick Lane London, E1 6SA</p>
+								<p>广东省深圳市</p>
 							</div>
 							<div class="col-sm-4 wow fadeInDown" data-wow-duration="1.5s" data-wow-delay=".6s">
 								<h3><span class="ti-email"></span>Email</h3>
-								<a href="mailto:info@themehexa.com">info@themehexa.com</a>							
+								<a href="mailto:info@themehexa.com">2513918412@qq.com</a>							
 							</div>
 							<div class="col-sm-4 wow fadeInDown" data-wow-duration="1.5s" data-wow-delay=".8s">
 								<h3><span class="ti-mobile"></span>Phone</h3>
-								<a href="tel:+441258889063">+44 125 888 9063</a>							
+								<a href="tel:+441258889063">135 XXXX XXXX</a>							
 							</div>
 						</div>	
 					</div>	
