--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="One Page Personal HTML Template">
 
-		<title>Talent</title>
+		<title>江个人主页</title>
 
 		<!-- Favicon -->
 		<link href="assets/img/favicon.ico" rel="icon" type="image/x-icon">			
@@ -70,7 +70,7 @@
 									<b>拍照是兴趣</b>
 								</span>
 							</h2>
-							<a href="#about" class="page-scroll btn custom-btn-3">L了解更多</a>
+							<a href="#about" class="page-scroll btn custom-btn-3">了解更多</a>
 						</div>
 					</div>
 				</div>
